ver 0.21.6 (not yet released)
* protocol
  - allow loading playlists specified as absolute filesystem paths
* input
  - cdio_paranoia: fix build failure due to missing #include
* playlist
  - flac: fix use-after-free bug
* support abstract sockets on Linux

ver 0.21.5 (2019/02/22)
* protocol
  - fix deadlock in "albumart" command
  - fix "tagtypes disable" command
* database
  - simple: fix assertion failure
  - fix assertion failures with mount points
* storage
  - udisks: fix "AlreadyMounted" error
  - udisks: use relative path from mount URI
  - fix memory leak
* input
  - buffer: fix crash bug when playing remote WAV file
* tags
  - ape: map "Album Artist"
* output
  - shout: add support for TLS
* mixer
  - pulse: add "scale_volume" setting

ver 0.21.4 (2019/01/04)
* database
  - inotify: fix crash bug "terminate called after throwing ..."
  - upnp: implement "list ... group"
* output
  - httpd: declare protocol "HTTP/1.1" instead of "ICY"
* remove libwrap support
* Windows
  - fix "Failed to accept connection: unknown error"
* fix Haiku build

ver 0.21.3 (2018/11/16)
* output
  - alsa: fix crash bug
  - alsa: fix stuttering at start of playback
  - alsa: fix discarded samples at end of song
  - alsa: clear error after reopening device
* log: default to journal if MPD was started as systemd service

ver 0.21.2 (2018/11/12)
* protocol
  - operator "=~" matches a regular expression
  - operator "contains" matches substrings
* decoder
  - ffmpeg: require FFmpeg 3.1 or later
  - ffmpeg: fix broken sound with certain codecs
* output
  - alsa: fix high CPU usage with dmix
  - httpd: fix three crash bugs
* mixer
  - alsa: fix more rounding errors
* fix zlib support

ver 0.21.1 (2018/11/04)
* protocol
  - allow escaping quotes in filter expressions
  - operator "==" never searches substrings in filter expressions
* decoder
  - ffmpeg: fix build failure with non-standard FFmpeg installation path
  - flac: fix linker failure when building without FLAC support
* encoder